--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,13 @@
     <groupId>log</groupId>
     <artifactId>center</artifactId>
     <version>1.0.1</version>
+    <packaging>jar</packaging>
     <name>center</name>
+    <url>http://localhost:3000/home</url>
+    <organization>
+        <name>logcenter</name>
+        <url>https://logcenter.info</url>
+    </organization>
     <description>spring boot for jpa and some review</description>
     <properties>
         <java.version>17</java.version>
@@ -39,6 +45,38 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+            <scope>runtime</scope>
+        </dependency>
+<!--        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        &lt;!&ndash; https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui &ndash;&gt;
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        &lt;!&ndash; https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui &ndash;&gt;
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>-->
     </dependencies>
 
     <build>
@@ -57,5 +95,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
