--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=center
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.username=root
+spring.datasource.password=1111
+# mysql \uC124\uC815
+#spring.jpa.database=mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# \uB85C\uADF8
+#logging.level.org.hibernate=info
+
+# sql \uCFFC\uB9AC \uBCF4\uC774\uAE30
+#spring.jpa.properties.hibernate.show_sql=true
+# SQL \uC774\uC058\uAC8C \uBCF4\uAE30
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.jpa.properties.hibernate.use_sql_comments=true
